--- a/src/app/components/invoice-details/invoice-details.component.scss
+++ b/src/app/components/invoice-details/invoice-details.component.scss
@@ -1,5 +1,6 @@
 .main-container {
     width: 100%;
+    min-width: 400px;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -325,6 +326,17 @@
 
 
 // Media Queries 
+@media screen and (min-width: 600px) {
+    .bottom-sec-bottom {
+        display: none;
+    }
+
+    .controls-bottom {
+        display: none;
+    }
+}
+
+
 @media screen and (max-width: 600px) {
     .invoice-details-wrapper {
         width: 450px;
@@ -360,5 +372,50 @@
 
     .middle-sec {
         gap: 32px;
+    }
+
+    .bottom-sec {
+        display: none;
+    }
+
+    .item-info-bottom {
+        padding: 24px;
+    }
+
+    .item-description-bottom {
+        font-size: 12px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .item-total-bottom {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+
+        p:first-of-type {
+            color: var(--black-deep);
+            font-weight: 700;
+            margin-bottom: 8px;
+        }
+    }
+
+    .item-description {
+        div {
+            .quantity-and-price-bottom{
+                p:first-of-type {
+                    color: var(--item-details-text-color);
+                    text-align: left;
+                    width: fit-content;
+                    margin-right: 5px;
+                }
+            }
+
+            p:nth-child(2) {
+                margin-left: 0;
+                text-align: left;
+                color: var(--item-details-text-color);
+            }
+        }
     }
 }
