--- a/src/app/components/invoice-details/invoice-details.component.html
+++ b/src/app/components/invoice-details/invoice-details.component.html
@@ -25,7 +25,7 @@
                     (click)="onDeleteInvoice(invoice.id)">
                     Delete
                 </button>
-                <button class="btn mark-as-paid-btn">Mark as Paid</button>
+                <button class="btn mark-as-paid-btn" (click)="markAsPaid()">Mark as Paid</button>
             </div>
         </div>
 
