--- a/src/app/components/invoice-details/invoice-details.component.scss
+++ b/src/app/components/invoice-details/invoice-details.component.scss
@@ -1,6 +1,5 @@
 .main-container {
     width: 100%;
-    min-width: 400px;
     height: 100%;
     display: flex;
     justify-content: center;
@@ -11,6 +10,7 @@
     width: 780px;
     height: fit-content;
     padding: 0 50px;
+    // background: yellow;
     // border: 1px solid black;
 }
 
