--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,8 +36,8 @@
 }
 
 body {
-    width: 100vw;
-    height: 100vh;
+    // width: 100%;
+    // height: 100vh;
     background: var(--white-smokish);
 }
 
